# rs-axum-admin

./: Cargo.toml  README.md  config.toml.example
app/: Cargo.toml
app/src/: lib.rs
app/src/api/: mod.rs
app/src/api/controller/: department.rs  employee.rs  login.rs  mod.rs  position.rs  role.rs
app/src/api/router/: app.rs
app/src/api/service/: department.rs  employee.rs  login.rs  mod.rs  position.rs  role.rs
app/src/ent/: mod.rs  prelude.rs  t_department.rs  t_employee.rs  t_menu.rs  t_operate_log.rs  t_position.rs  t_role.rs  t_role_employee.rs  t_role_menu.rs
pkg/: Cargo.toml
pkg/src/: identity.rs  lib.rs  tree.rs  util.rs
pkg/src/crypto/: hash.rs
pkg/src/middleware/: cors.rs
sql/: rs_admin.sql
src/: main.rs
