[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
#命令行解析器
clap = { version = "4.5.18", features = ["derive"]}

#异步
tokio = { version = "1.40.0", features = ["full"]}

#错误处理
anyhow = "1.0.89"
thiserror = "1.0.64"

#序列化/反序列化
serde = { version = "1.0.210", features = ["derive"]} 
serde_json = "1.0.128"

#日志
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-appender = "0.2.3"

#Web
axum = { version = "0.7.6", features = ["macros"]}
axum-extra = "0.9.3"

# 数据验证
validator = { version = "0.18.1", features = ["derive"]}

# orm 
sea-orm = { version = "1.0.1", features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "debug-print",
]}
# 日期
chrono = "0.4.38"
#时间
time = {version = "0.3.36", features = [
    "macros",
    "local-offset",
    "formatting",
    "parsing",
]}

tower-http = { version = "0.6.1", features = ["trace"]}







# workspace modules
pkg = { path = "../pkg" }



